2015-12-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Add version to js file name
	* Update extension requirements
	* Update to composer.json
	* Resolves #60428: cancel link on delete from does not work in in FF

2015-12-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #72196: Adapt to Rsaauth of TYPO3 CMS 7
	* Fix for form submission
	* Update to the manual

2015-12-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #72189: Use MarkerBasedTemplateService when available
	* Resolves #72193: Remove extension configuration property enableDirectMail

2015-12-10 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for token validation
	* Check referer in some cases
	* Require static_info_tables version 6.3.6
	* Update the manual
	* Resolves #48635: fe_users pid as comma-separated list
	* Fix for url generation

2015-12-09 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for password edition after invitation acceptation
	* Add template for invalid token
	* Follow-up to Add template for invalid token
	* Resolves: #59446: Template: dynamic field length using TCA

2015-12-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for password edition
	* Fixes for files upload

2015-12-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for the login forms
	* Fix for edit link after login

2015-11-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* [!!!] Use namespacing
	* [!!!] Remove TS-configured userFuncs in favor of hooks
	* Resolves #71660: [!!!] Refactor, streamline and cleanup all scripts: all API changed
	* Resolves #61659: Usergroups are removed on update
	* Fix error regarding salutation in static TS template
	* Resolves #60167: Missing_terms_acknowlegded doesn't work
	* Correction to composer.json
	* Correction to plugin registration

2015-11-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #71286: [!!!] Remove xclass assignments
	* Adjust copyright notices

2015-10-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>