@@ -60,6 +60,8 @@ class EditActionController extends AbstractActionController
 		if ($this->conf[$cmdKey . '.']['preview'] && (int) $this->parameters->getFeUserData('preview')) {
 			$mode = AbstractView::MODE_PREVIEW;
 		}
+		$isSubmit = $this->parameters->getFeUserData('submit');
+		$isSubmit = !empty($isSubmit);
 		$isDoNotSave = $this->parameters->getFeUserData('doNotSave');
 		$isDoNotSave = !empty($isDoNotSave);
 		if ($isDoNotSave) {
@@ -92,7 +94,7 @@ class EditActionController extends AbstractActionController
 			}
 			$this->data->setUsername($dataArray, $cmdKey);
 			$this->data->setDataArray($dataArray);
-			if (!$this->data->getFailure() && $mode === AbstractView::MODE_NORMAL && !$isDoNotSave && !$this->parameters->getFeUserData('rU')) {
+			if (!$this->data->getFailure() && $mode === AbstractView::MODE_NORMAL && $isSubmit && !$isDoNotSave && !$this->parameters->getFeUserData('rU')) {
 				$this->data->setPassword($dataArray, $cmdKey);
 				$newDataArray = array();
 				$theUid = $this->data->save($dataArray, $origArray, SessionData::readToken($this->extensionKey), $newDataArray, $cmd, $cmdKey, $this->parameters->getPid());
